completed second page of info site. NOTE: in page 1 and 2 there is a link with a fake email that is clickable... This does not actually work.  The HREF has a placeholder in place of an actual link

--- a/pageOne_twoPg_infoSIte.html
+++ b/pageOne_twoPg_infoSIte.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>30</title>
+    <title>Cologne Discovery</title>
 </head>
 <body>
 
@@ -60,5 +60,11 @@
         </section>
     </main>
     
+    <footer>
+        <h4><a href="pageOne_twoPg_infoSite.html">HOME</a></h4>
+        <h4>© 2024 Cologne Discovery Site. All rights reserved.</h4>
+        <h4><a href="pageTwo_twoPg_infoSite.html">Explore More Cologne Options</a></h4>
+        <h4> Contact Us At: <a href="#">info@colognediscovery.com</a></h4>
+    </footer>
 </body>
 </html>
