--- a/pageTwo_twoPg_infoSite.html
+++ b/pageTwo_twoPg_infoSite.html
@@ -3,9 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cologne Discovery</title>
 </head>
 <body>
-    
+    <header>
+        <h1>More Cologne Options to Explore <br> Scroll Now!</h1>
+    </header>
+
+    <main>
+        <section> 
+            <h1> Classic Favorites </h1>
+            <ul> 
+
+                <li> <h2>Chanel Bleu De Chanel Eau De Parfum</h2> </li>
+                <img src="chanelBleuDeChanel_cologne_img5.jpg" alt="Chanel Bleu De Chanel Eau De Parfum bottle">
+                <p>
+                    <b>Notes:</b> Fresh and woody scent with citrus, sandalwood, and cedar notes. <br>
+                    <b>Occasion:</b> Suitable for both casual and formal settings. <br>
+                    <b>Longevity:</b> Long-lasting, typically 8+ hours on the skin. <br>
+                    <b>History:</b> Launched in 2010, Bleu De Chanel was created by perfumer Jacques Polge <br>
+                    to embody the essence of freedom and elegance with a modern twist.
+                </p>             
+
+                <li> <h2>Paco Rabanne Invictus</h2> </li>
+                <img src="pacoRabanneInvictus_cologne_img6.jpg" alt="Paco Rabanne Invictus bottle">
+                <p>
+                    <b>Notes:</b> Fresh and sporty scent with grapefruit, marine notes, and ambergris. <br>
+                    <b>Occasion:</b> Perfect for daytime wear and active lifestyles. <br>
+                    <b>Longevity:</b> Moderate to long-lasting, typically 6-8 hours on the skin. <br>
+                    <b>History:</b> Introduced in 2013, Invictus by Paco Rabanne was designed by perfumers <br>
+                    Anne Flipo and Christophe Raynaud to capture the spirit of victory and strength.
+                </p>
+
+                <li> <h2>Tom Ford Noir Extreme</h2> </li>
+                <img src="tomFordNoirExtreme_cologne_img7.jpg" alt="Tom Ford Noir Extreme bottle">
+                <p>
+                    <b>Notes:</b> Warm and oriental scent with cardamom, amber, and vanilla notes. <br>
+                    <b>Occasion:</b> Ideal for evening wear and special occasions. <br>
+                    <b>Longevity:</b> Long-lasting, typically 8+ hours on the skin. <br>
+                    <b>History:</b> Launched in 2015, Noir Extreme by Tom Ford was created to evoke <br>
+                    a sense of mystery and sophistication with its rich and complex composition.
+                </p>
+
+                <li> <h2>Versace Eros Eau De Parfum</h2> </li>
+                <img src="versaceEros_cologne_img8.jpg" alt="Versace Eros Eau De Parfum bottle">
+                <p> 
+                    <b>Notes:</b> Fresh and oriental scent with mint, tonka bean, and vanilla notes. <br>
+                    <b>Occasion:</b> Suitable for both day and night wear. <br>
+                    <b>Longevity:</b> Long-lasting, typically 8+ hours on the skin. <br>
+                    <b>History:</b> Introduced in 2012, Eros by Versace was crafted by perfumers <br>
+                    Aurelien Guichard and Olivier Pescheux to embody passion and desire.
+                </p>
+
+            </ul>
+        </section>
+    </main>
+
+    <footer> 
+        <h4><a href="pageOne_twoPg_infoSite.html">HOME</a></h4>
+        <h4>© 2024 Cologne Discovery Site. All rights reserved.</h4>
+        <h4><a href="pageTwo_twoPg_infoSite.html">Explore More Cologne Options</a></h4>
+        <h4> Contact Us At: <a href="#">info@colognediscovery.com</a></h4>
+    </footer>
 </body>
 </html>
