Final HTML structure for both pages 1 and 2 w/code documentation

--- a/pageTwo_twoPg_infoSite.html
+++ b/pageTwo_twoPg_infoSite.html
@@ -6,17 +6,25 @@
     <title>Cologne Discovery</title>
 </head>
 <body>
+
+    <!-- (header) Title at start -->
+
     <header>
         <h1>More Cologne Options to Explore <br> Scroll Now!</h1>
     </header>
 
+    <!-- Main section start -->
+    
     <main>
         <section> 
+
+            <!-- classic favorites unordered list  -->
+
             <h1> Classic Favorites </h1>
             <ul> 
 
                 <li> <h2>Chanel Bleu De Chanel Eau De Parfum</h2> </li>
-                <img src="chanelBleuDeChanel_cologne_img5.jpg" alt="Chanel Bleu De Chanel Eau De Parfum bottle">
+                <img src="chanelBleuDeChanel_cologne_img5.jpg" alt="Chanel Bleu De Chanel Eau De Parfum bottle" width="300" height="300">
                 <p>
                     <b>Notes:</b> Fresh and woody scent with citrus, sandalwood, and cedar notes. <br>
                     <b>Occasion:</b> Suitable for both casual and formal settings. <br>
@@ -26,7 +34,7 @@
                 </p>             
 
                 <li> <h2>Paco Rabanne Invictus</h2> </li>
-                <img src="pacoRabanneInvictus_cologne_img6.jpg" alt="Paco Rabanne Invictus bottle">
+                <img src="pacoRabanneInvictus_cologne_img6.jpg" alt="Paco Rabanne Invictus bottle" width="300" height="300">
                 <p>
                     <b>Notes:</b> Fresh and sporty scent with grapefruit, marine notes, and ambergris. <br>
                     <b>Occasion:</b> Perfect for daytime wear and active lifestyles. <br>
@@ -36,7 +44,7 @@
                 </p>
 
                 <li> <h2>Tom Ford Noir Extreme</h2> </li>
-                <img src="tomFordNoirExtreme_cologne_img7.jpg" alt="Tom Ford Noir Extreme bottle">
+                <img src="tomFordNoirExtreme_cologne_img7.jpg" alt="Tom Ford Noir Extreme bottle" width="300" height="300">
                 <p>
                     <b>Notes:</b> Warm and oriental scent with cardamom, amber, and vanilla notes. <br>
                     <b>Occasion:</b> Ideal for evening wear and special occasions. <br>
@@ -46,7 +54,7 @@
                 </p>
 
                 <li> <h2>Versace Eros Eau De Parfum</h2> </li>
-                <img src="versaceEros_cologne_img8.jpg" alt="Versace Eros Eau De Parfum bottle">
+                <img src="versaceEros_cologne_img8.jpg" alt="Versace Eros Eau De Parfum bottle" width="300" height="300">
                 <p> 
                     <b>Notes:</b> Fresh and oriental scent with mint, tonka bean, and vanilla notes. <br>
                     <b>Occasion:</b> Suitable for both day and night wear. <br>
@@ -59,10 +67,13 @@
         </section>
     </main>
 
+    <!-- Footer section start -->
+
     <footer> 
         <h4><a href="pageOne_twoPg_infoSite.html">HOME</a></h4>
         <h4>© 2024 Cologne Discovery Site. All rights reserved.</h4>
         <h4><a href="pageTwo_twoPg_infoSite.html">Explore More Cologne Options</a></h4>
+        <!-- href is '#' to be used as a placeholder -->
         <h4> Contact Us At: <a href="#">info@colognediscovery.com</a></h4>
     </footer>
 </body>
