Changed background color from white to grey and text color from black to white

--- a/pageOne_twoPg_infoSIte.html
+++ b/pageOne_twoPg_infoSIte.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cologne Discovery</title>
+    <link rel="stylesheet" href="pageOneStyling.css">
 </head>
 <body>
 
     <!-- Title and img at start -->
-    <header>
+    <header class = "site-header">
         <h1>Welcome to the Cologne site <br> Ready to Learn about Cologne's?</h1>
         <img src="cologne_img1.jpg" alt="Batch of cologne bottles">
         <p> <a href="pageTwo_twoPg_infoSite.html">Click Here</a> to learn more about cologne and its history! </p>
@@ -16,8 +17,8 @@
 
     <!-- Main section start -->
 
-    <main>
-        <section> 
+    <main class="main-content">
+        <section id="currently-trending-list"> 
 
             <!-- currentlu trending ordered list  -->
 
@@ -67,7 +68,7 @@
     
     <!-- Footer section start -->
 
-    <footer>
+    <footer class="site-footer">
         <h4><a href="pageOne_twoPg_infoSite.html">HOME</a></h4>
         <h4>© 2024 Cologne Discovery Site. All rights reserved.</h4>
         <h4><a href="pageTwo_twoPg_infoSite.html">Explore More Cologne Options</a></h4>
