completed CSS for first page of info site.  Commented out lines of CSS that were apart of an experiment that needs further time to work on

--- a/pageOne_twoPg_infoSIte.html
+++ b/pageOne_twoPg_infoSIte.html
@@ -22,46 +22,44 @@
 
             <!-- currentlu trending ordered list  -->
 
-            <h1> Currently Trending </h1>
+            <h1 id="trendingListTitle"> Currently Trending </h1>
             <ol> 
 
-                <li> <h2>Dior Sauvage Eau De Parfum</h2> </li>
-                <img src="diorSauvage_cologne_img2.jpg" alt="Dior Sauvage Eau De Parfum bottle" width="300" height="300">   
-                <p> 
-                    <b>Notes:</b> Woody, spicy, and fresh scent with cedar, cardamom, and vetiver notes. <br>
-                    <b>Occasion:</b> Perfect for evening wear and special occasions. <br>
-                    <b>Longevity:</b> Long-lasting, typically 8+ hours on the skin. <br>
-                    <b>History:</b> Dior Sauvage was first launched in 2015 by Dior’s in-house perfumer <br> 
-                    François Demachy as a modern reinterpretation of the brand’s classic masculine spirit, <br>
-                    inspired by wide-open landscapes and raw nature with notes like bergamot and ambroxan. 
-                </p>             
+                    <li id="diorSauvage"> <h2>Dior Sauvage Eau De Parfum</h2>
+                    <img src="diorSauvage_cologne_img2.jpg" alt="Dior Sauvage Eau De Parfum bottle" width="300" height="300">   
+                    <p> 
+                        <b>Notes:</b> Woody, spicy, and fresh scent with cedar, cardamom, and vetiver notes. <br>
+                        <b>Occasion:</b> Perfect for evening wear and special occasions. <br>
+                        <b>Longevity:</b> Long-lasting, typically 8+ hours on the skin. <br>
+                        <b>History:</b> Dior Sauvage was first launched in 2015 by Dior’s in-house perfumer <br> 
+                        François Demachy as a modern reinterpretation of the brand’s classic masculine spirit, <br>
+                        inspired by wide-open landscapes and raw nature with notes like bergamot and ambroxan. 
+                    </p>   
+                    </li>          
+
+                    <li id="armaniStronger"> <h2>Armani Stronger With You Intensely</h2> 
+                    <img src="armaniStrongerWithYou_cologne_img3.jpg" alt="Armani Stronger With You Intensely bottle" width="300" height="300">
+                    <p>
+                        <b>Notes:</b> Warm and spicy scent with vanilla, cinnamon, and chestnut notes. <br>
+                        <b>Occasion:</b> Ideal for romantic evenings and colder weather. <br>
+                        <b>Longevity:</b> Long-lasting, typically 7-9 hours on the skin. <br>
+                        <b>History:</b> Launched in 2017 as a follow-up to the original Stronger With You, <br>
+                        this fragrance by Giorgio Armani emphasizes deeper, more intense notes <br>
+                        to evoke passion and connection.
+                    </p>
+                    </li>
                 
-
-                <li> <h2>Armani Stronger With You Intensely</h2> </li>
-                <img src="armaniStrongerWithYou_cologne_img3.jpg" alt="Armani Stronger With You Intensely bottle" width="300" height="300">
-                <p>
-                    <b>Notes:</b> Warm and spicy scent with vanilla, cinnamon, and chestnut notes. <br>
-                    <b>Occasion:</b> Ideal for romantic evenings and colder weather. <br>
-                    <b>Longevity:</b> Long-lasting, typically 7-9 hours on the skin. <br>
-                    <b>History:</b> Launched in 2017 as a follow-up to the original Stronger With You, <br>
-                    this fragrance by Giorgio Armani emphasizes deeper, more intense notes <br>
-                    to evoke passion and connection.
-                </p>
-                <br>
-
-                
-
-                <li> <h2>Yves Saint Laurent Y Eau De Parfum</h2> </li>                
-                <img src="yvesSaintLaurentY_cologne_img4.jpg" alt="Yves Saint Laurent Y Eau De Parfum bottle" width="300" height="300">
-                <p>
-                    <b>Notes:</b> Fresh and aromatic scent with bergamot, ginger, and sage notes. <br>
-                    <b>Occasion:</b> Versatile for both day and night wear. <br>
-                    <b>Longevity:</b> Moderate to long-lasting, typically 6-8 hours on the skin. <br>
-                    <b>History:</b> Introduced in 2017, Y by Yves Saint Laurent was created by perfumer <br>
-                    Dominique Ropion to capture the spirit of a new generation of <br>
-                    men who are ambitious.
-                </p>
-
+                    <li id="yves"> <h2>Yves Saint Laurent Y Eau De Parfum</h2> 
+                    <img src="yvesSaintLaurentY_cologne_img4.jpg" alt="Yves Saint Laurent Y Eau De Parfum bottle" width="300" height="300">
+                    <p>
+                        <b>Notes:</b> Fresh and aromatic scent with bergamot, ginger, and sage notes. <br>
+                        <b>Occasion:</b> Versatile for both day and night wear. <br>
+                        <b>Longevity:</b> Moderate to long-lasting, typically 6-8 hours on the skin. <br>
+                        <b>History:</b> Introduced in 2017, Y by Yves Saint Laurent was created by perfumer <br>
+                        Dominique Ropion to capture the spirit of a new generation of <br>
+                        men who are ambitious.
+                    </p>
+                    </li>
             </ol>
         </section>
     </main>
