completed CSS for 2nd page of info site.  Experimented with linear gradient background transition for 2nd page

--- a/pageTwo_twoPg_infoSite.html
+++ b/pageTwo_twoPg_infoSite.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cologne Discovery</title>
+    <link rel="stylesheet" href="pageTwoStyling.css">
 </head>
 <body>
 
     <!-- (header) Title at start -->
 
-    <header>
+    <header id="headerTwo">
         <h1>More Cologne Options to Explore <br> Scroll Now!</h1>
     </header>
 
@@ -20,10 +21,10 @@
 
             <!-- classic favorites unordered list  -->
 
-            <h1> Classic Favorites </h1>
+            <h1 id="classicFavoritesTitle"> Classic Favorites </h1>
             <ul> 
 
-                <li> <h2>Chanel Bleu De Chanel Eau De Parfum</h2> </li>
+                <li id="chanel"> <h2>Chanel Bleu De Chanel Eau De Parfum</h2>
                 <img src="chanelBleuDeChanel_cologne_img5.jpg" alt="Chanel Bleu De Chanel Eau De Parfum bottle" width="300" height="300">
                 <p>
                     <b>Notes:</b> Fresh and woody scent with citrus, sandalwood, and cedar notes. <br>
@@ -32,8 +33,9 @@
                     <b>History:</b> Launched in 2010, Bleu De Chanel was created by perfumer Jacques Polge <br>
                     to embody the essence of freedom and elegance with a modern twist.
                 </p>             
+                </li>
 
-                <li> <h2>Paco Rabanne Invictus</h2> </li>
+                <li id="Paco"> <h2>Paco Rabanne Invictus</h2>
                 <img src="pacoRabanneInvictus_cologne_img6.jpg" alt="Paco Rabanne Invictus bottle" width="300" height="300">
                 <p>
                     <b>Notes:</b> Fresh and sporty scent with grapefruit, marine notes, and ambergris. <br>
@@ -42,8 +44,9 @@
                     <b>History:</b> Introduced in 2013, Invictus by Paco Rabanne was designed by perfumers <br>
                     Anne Flipo and Christophe Raynaud to capture the spirit of victory and strength.
                 </p>
+                </li>
 
-                <li> <h2>Tom Ford Noir Extreme</h2> </li>
+                <li id="Tom"> <h2>Tom Ford Noir Extreme</h2>
                 <img src="tomFordNoirExtreme_cologne_img7.jpg" alt="Tom Ford Noir Extreme bottle" width="300" height="300">
                 <p>
                     <b>Notes:</b> Warm and oriental scent with cardamom, amber, and vanilla notes. <br>
@@ -52,8 +55,9 @@
                     <b>History:</b> Launched in 2015, Noir Extreme by Tom Ford was created to evoke <br>
                     a sense of mystery and sophistication with its rich and complex composition.
                 </p>
+                </li>
 
-                <li> <h2>Versace Eros Eau De Parfum</h2> </li>
+                <li id="versace"> <h2>Versace Eros Eau De Parfum</h2>
                 <img src="versaceEros_cologne_img8.jpg" alt="Versace Eros Eau De Parfum bottle" width="300" height="300">
                 <p> 
                     <b>Notes:</b> Fresh and oriental scent with mint, tonka bean, and vanilla notes. <br>
@@ -62,6 +66,7 @@
                     <b>History:</b> Introduced in 2012, Eros by Versace was crafted by perfumers <br>
                     Aurelien Guichard and Olivier Pescheux to embody passion and desire.
                 </p>
+                </li>
 
             </ul>
         </section>
@@ -69,7 +74,7 @@
 
     <!-- Footer section start -->
 
-    <footer> 
+    <footer class="footer2"> 
         <h4><a href="pageOne_twoPg_infoSite.html">HOME</a></h4>
         <h4>© 2024 Cologne Discovery Site. All rights reserved.</h4>
         <h4><a href="pageTwo_twoPg_infoSite.html">Explore More Cologne Options</a></h4>
