--- a/pageOne_twoPg_infoSIte.html
+++ b/pageOne_twoPg_infoSIte.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cologne Discovery</title>
     <!-- BOOTSTRAP -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- MY OWN  -->
     <link rel="stylesheet" href="pageOneStyling.css">
 </head>
 <body>
 
     <!-- Title and img at start -->
-    <header class = "site-header">
+     <!-- bootstrap implementation -->
+    <header class = "text-center site-header">
         <h1>Welcome to the Cologne site <br> Ready to Learn about Cologne's?</h1>
         <img src="cologne_img1.jpg" alt="Batch of cologne bottles">
         <p> <a href="pageTwo_twoPg_infoSite.html">Click Here</a> to learn more about cologne and its history! </p>
@@ -26,7 +27,7 @@
             <!-- currentlu trending ordered list  -->
 
             <h1 id="trendingListTitle"> Currently Trending </h1>
-            <ol> 
+            <ol > 
 
                     <li id="diorSauvage"> <h2>Dior Sauvage Eau De Parfum</h2>
                     <img src="diorSauvage_cologne_img2.jpg" alt="Dior Sauvage Eau De Parfum bottle" width="300" height="300">   
