completred bootstrap implementation for first page

--- a/pageOne_twoPg_infoSIte.html
+++ b/pageOne_twoPg_infoSIte.html
@@ -13,7 +13,7 @@
 
     <!-- Title and img at start -->
      <!-- bootstrap implementation -->
-    <header class = "text-center site-header">
+    <header class = "text-center site-header py-4">
         <h1>Welcome to the Cologne site <br> Ready to Learn about Cologne's?</h1>
         <img src="cologne_img1.jpg" alt="Batch of cologne bottles">
         <p> <a href="pageTwo_twoPg_infoSite.html">Click Here</a> to learn more about cologne and its history! </p>
@@ -27,9 +27,9 @@
             <!-- currentlu trending ordered list  -->
 
             <h1 id="trendingListTitle"> Currently Trending </h1>
-            <ol > 
+            <ol class="row align-items-start"> 
 
-                    <li id="diorSauvage"> <h2>Dior Sauvage Eau De Parfum</h2>
+                    <li id="diorSauvage" class = "d-flex flex-column flex-md-row align-items-center justify-content-center text-center gap-3 mx-auto" style="max-width:1000px;"> <h2>Dior Sauvage Eau De Parfum</h2>
                     <img src="diorSauvage_cologne_img2.jpg" alt="Dior Sauvage Eau De Parfum bottle" width="300" height="300">   
                     <p> 
                         <b>Notes:</b> Woody, spicy, and fresh scent with cedar, cardamom, and vetiver notes. <br>
@@ -70,7 +70,7 @@
     
     <!-- Footer section start -->
 
-    <footer class="site-footer">
+    <footer class="site-footer d-flex flex-column align-items-center justify-content-center py-3">
         <h3><a href="pageOne_twoPg_infoSite.html">HOME</a></h3>
         <h3>© 2024 Cologne Discovery Site. All rights reserved.</h3>
         <h3><a href="pageTwo_twoPg_infoSite.html">Explore More Cologne Options</a></h3>
