completed page Two by implementing bootstrap and elimnating any extra code that is not needed.  Refined page One with bootstrap.  Completed bootstrap implementation on the whole site.

--- a/pageOne_twoPg_infoSIte.html
+++ b/pageOne_twoPg_infoSIte.html
@@ -26,10 +26,10 @@
 
             <!-- currentlu trending ordered list  -->
 
-            <h1 id="trendingListTitle"> Currently Trending </h1>
+            <h1 id="trendingListTitle" class="text-center"> Currently Trending </h1>
             <ol class="row align-items-start"> 
 
-                    <li id="diorSauvage" class = "d-flex flex-column flex-md-row align-items-center justify-content-center text-center gap-3 mx-auto" style="max-width:1000px;"> <h2>Dior Sauvage Eau De Parfum</h2>
+                    <li id="diorSauvage" class = "d-flex flex-column align-items-center justify-content-center text-center"> <h2>Dior Sauvage Eau De Parfum</h2>
                     <img src="diorSauvage_cologne_img2.jpg" alt="Dior Sauvage Eau De Parfum bottle" width="300" height="300">   
                     <p> 
                         <b>Notes:</b> Woody, spicy, and fresh scent with cedar, cardamom, and vetiver notes. <br>
@@ -41,7 +41,7 @@
                     </p>   
                     </li>          
 
-                    <li id="armaniStronger"> <h2>Armani Stronger With You Intensely</h2> 
+                    <li id="armaniStronger" class = "d-flex flex-column align-items-center justify-content-center text-center"> <h2>Armani Stronger With You Intensely</h2> 
                     <img src="armaniStrongerWithYou_cologne_img3.jpg" alt="Armani Stronger With You Intensely bottle" width="300" height="300">
                     <p>
                         <b>Notes:</b> Warm and spicy scent with vanilla, cinnamon, and chestnut notes. <br>
@@ -53,7 +53,7 @@
                     </p>
                     </li>
                 
-                    <li id="yves"> <h2>Yves Saint Laurent Y Eau De Parfum</h2> 
+                    <li id="yves" class="d-flex flex-column align-items-center justify-content-center text-center"> <h2>Yves Saint Laurent Y Eau De Parfum</h2> 
                     <img src="yvesSaintLaurentY_cologne_img4.jpg" alt="Yves Saint Laurent Y Eau De Parfum bottle" width="300" height="300">
                     <p>
                         <b>Notes:</b> Fresh and aromatic scent with bergamot, ginger, and sage notes. <br>
