--- a/pageTwo_twoPg_infoSite.html
+++ b/pageTwo_twoPg_infoSite.html
@@ -13,7 +13,7 @@
 
     <!-- (header) Title at start -->
 
-    <header id="headerTwo">
+    <header id="headerTwo" class="text-center py-5">
         <h1>More Cologne Options to Explore <br> Scroll Now!</h1>
     </header>
 
@@ -24,10 +24,10 @@
 
             <!-- classic favorites unordered list  -->
 
-            <h1 id="classicFavoritesTitle"> Classic Favorites </h1>
+            <h1 id="classicFavoritesTitle" class="text-center"> Classic Favorites </h1>
             <ul> 
 
-                <li id="chanel"> <h2>Chanel Bleu De Chanel Eau De Parfum</h2>
+                <li id="chanel" class="d-flex flex-column align-items-center justify-content-center text-center"> <h2>Chanel Bleu De Chanel Eau De Parfum</h2>
                 <img src="chanelBleuDeChanel_cologne_img5.jpg" alt="Chanel Bleu De Chanel Eau De Parfum bottle" width="300" height="300">
                 <p>
                     <b>Notes:</b> Fresh and woody scent with citrus, sandalwood, and cedar notes. <br>
@@ -38,7 +38,7 @@
                 </p>             
                 </li>
 
-                <li id="Paco"> <h2>Paco Rabanne Invictus</h2>
+                <li id="Paco" class="d-flex flex-column align-items-center justify-content-center text-center"> <h2>Paco Rabanne Invictus</h2>
                 <img src="pacoRabanneInvictus_cologne_img6.jpg" alt="Paco Rabanne Invictus bottle" width="300" height="300">
                 <p>
                     <b>Notes:</b> Fresh and sporty scent with grapefruit, marine notes, and ambergris. <br>
@@ -49,7 +49,7 @@
                 </p>
                 </li>
 
-                <li id="Tom"> <h2>Tom Ford Noir Extreme</h2>
+                <li id="Tom" class="d-flex flex-column align-items-center justify-content-center text-center"> <h2>Tom Ford Noir Extreme</h2>
                 <img src="tomFordNoirExtreme_cologne_img7.jpg" alt="Tom Ford Noir Extreme bottle" width="300" height="300">
                 <p>
                     <b>Notes:</b> Warm and oriental scent with cardamom, amber, and vanilla notes. <br>
@@ -60,7 +60,7 @@
                 </p>
                 </li>
 
-                <li id="versace"> <h2>Versace Eros Eau De Parfum</h2>
+                <li id="versace" class="d-flex flex-column align-items-center justify-content-center text-center"> <h2>Versace Eros Eau De Parfum</h2>
                 <img src="versaceEros_cologne_img8.jpg" alt="Versace Eros Eau De Parfum bottle" width="300" height="300">
                 <p> 
                     <b>Notes:</b> Fresh and oriental scent with mint, tonka bean, and vanilla notes. <br>
@@ -77,7 +77,7 @@
 
     <!-- Footer section start -->
 
-    <footer class="footer2"> 
+    <footer class="footer2 site-footer d-flex flex-column align-items-center justify-content-center py-3"> 
         <h3><a href="pageOne_twoPg_infoSite.html">HOME</a></h3>
         <h3>© 2024 Cologne Discovery Site. All rights reserved.</h3>
         <h3><a href="pageTwo_twoPg_infoSite.html">Explore More Cologne Options</a></h3>
