--- a/pages/pageOne/pageOne_twoPg_infoSIte.html
+++ b/pages/pageOne/pageOne_twoPg_infoSIte.html
@@ -7,7 +7,7 @@
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- MY OWN  -->
-    <link rel="stylesheet" href="pages/pageOne/pageOneStyling.css">
+    <link rel="stylesheet" href="pageOneStyling.css">
 </head>
 <body>
 
@@ -15,8 +15,8 @@
      <!-- bootstrap implementation -->
     <header class = "text-center site-header py-4">
         <h1>Welcome to the Cologne site <br> Ready to Learn about Cologne's?</h1>
-        <img src="imgs_infoSite/cologne_img1.jpg" alt="Batch of cologne bottles">
-        <p> <a href="pages/pageTwo/pageTwo_twoPg_infoSite.html">Click Here</a> to learn more about cologne and its history! </p>
+        <img src="../../imgs_infoSite/cologne_img1.jpg" alt="Batch of cologne bottles">
+        <p> <a href="../pages/pageTwo/pageTwo_twoPg_infoSite.html">Click Here</a> to learn more about cologne and its history! </p>
     </header>
 
     <!-- Main section start -->
@@ -30,7 +30,7 @@
             <ol> 
 
                     <li id="diorSauvage" class = "d-flex flex-column align-items-center justify-content-center text-center"> <h2>Dior Sauvage Eau De Parfum</h2>
-                    <img src="imgs_infoSite/diorSauvage_cologne_img2.jpg" alt="Dior Sauvage Eau De Parfum bottle" width="300" height="300">   
+                    <img src="../../imgs_infoSite/diorSauvage_cologne_img2.jpg" alt="Dior Sauvage Eau De Parfum bottle" width="300" height="300">   
                     <p> 
                         <b>Notes:</b> Woody, spicy, and fresh scent with cedar, cardamom, and vetiver notes. <br>
                         <b>Occasion:</b> Perfect for evening wear and special occasions. <br>
@@ -42,7 +42,7 @@
                     </li>          
 
                     <li id="armaniStronger" class = "d-flex flex-column align-items-center justify-content-center text-center"> <h2>Armani Stronger With You Intensely</h2> 
-                    <img src="imgs_infoSite/armaniStrongerWithYou_cologne_img3.jpg" alt="Armani Stronger With You Intensely bottle" width="300" height="300">
+                    <img src="../../imgs_infoSite/armaniStrongerWithYou_cologne_img3.jpg" alt="Armani Stronger With You Intensely bottle" width="300" height="300">
                     <p>
                         <b>Notes:</b> Warm and spicy scent with vanilla, cinnamon, and chestnut notes. <br>
                         <b>Occasion:</b> Ideal for romantic evenings and colder weather. <br>
@@ -54,7 +54,7 @@
                     </li>
                 
                     <li id="yves" class="d-flex flex-column align-items-center justify-content-center text-center"> <h2>Yves Saint Laurent Y Eau De Parfum</h2> 
-                    <img src="imgs_infoSite/yvesSaintLaurentY_cologne_img4.jpg" alt="Yves Saint Laurent Y Eau De Parfum bottle" width="300" height="300">
+                    <img src="../../imgs_infoSite/yvesSaintLaurentY_cologne_img4.jpg" alt="Yves Saint Laurent Y Eau De Parfum bottle" width="300" height="300">
                     <p>
                         <b>Notes:</b> Fresh and aromatic scent with bergamot, ginger, and sage notes. <br>
                         <b>Occasion:</b> Versatile for both day and night wear. <br>
@@ -71,9 +71,9 @@
     <!-- Footer section start -->
 
     <footer class="site-footer d-flex flex-column align-items-center justify-content-center py-3">
-        <h3><a href="pages/pageOne/pageOne_twoPg_infoSIte.html">HOME</a></h3>
+        <h3><a href="pageOne_twoPg_infoSIte.html">HOME</a></h3>
         <h3>© 2024 Cologne Discovery Site. All rights reserved.</h3>
-        <h3><a href="pages/pageTwo/pageTwo_twoPg_infoSite.html">Explore More Cologne Options</a></h3>
+        <h3><a href="../pageTwo/pageTwo_twoPg_infoSite.html">Explore More Cologne Options</a></h3>
         <!-- href is '#' to be used as a placeholder -->
         <h3> Contact Us At: <a href="#">info@colognediscovery.com</a></h3>
     </footer>
