Attempt 3 of debugging.  Fixed file locations

--- a/pages/pageOne/pageOne_twoPg_infoSIte.html
+++ b/pages/pageOne/pageOne_twoPg_infoSIte.html
@@ -16,7 +16,7 @@
     <header class = "text-center site-header py-4">
         <h1>Welcome to the Cologne site <br> Ready to Learn about Cologne's?</h1>
         <img src="../../imgs_infoSite/cologne_img1.jpg" alt="Batch of cologne bottles">
-        <p> <a href="../pages/pageTwo/pageTwo_twoPg_infoSite.html">Click Here</a> to learn more about cologne and its history! </p>
+        <p> <a href="../../pages/pageTwo/pageTwo_twoPg_infoSite.html">Click Here</a> to learn more about cologne and its history! </p>
     </header>
 
     <!-- Main section start -->
