--- a/pages/pageTwo/pageTwo_twoPg_infoSite.html
+++ b/pages/pageTwo/pageTwo_twoPg_infoSite.html
@@ -7,7 +7,7 @@
     <!-- THIS IS BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--  MY OWN CSS FILE -->
-    <link rel="stylesheet" href="/pages/pageTwo/pageTwoStyling.css">
+    <link rel="stylesheet" href="pageTwoStyling.css">
 </head>
 <body>
 
@@ -28,7 +28,7 @@
             <ul> 
 
                 <li id="chanel" class="d-flex flex-column align-items-center justify-content-center text-center"> <h2>Chanel Bleu De Chanel Eau De Parfum</h2>
-                <img src="/imgs_infoSite/chanelBleuDeChanel_cologne_img5.jpg" alt="Chanel Bleu De Chanel Eau De Parfum bottle" width="300" height="300">
+                <img src="../../imgs_infoSite/chanelBleuDeChanel_cologne_img5.jpg" alt="Chanel Bleu De Chanel Eau De Parfum bottle" width="300" height="300">
                 <p>
                     <b>Notes:</b> Fresh and woody scent with citrus, sandalwood, and cedar notes. <br>
                     <b>Occasion:</b> Suitable for both casual and formal settings. <br>
@@ -39,7 +39,7 @@
                 </li>
 
                 <li id="Paco" class="d-flex flex-column align-items-center justify-content-center text-center"> <h2>Paco Rabanne Invictus</h2>
-                <img src="/imgs_infoSite/pacoRabanneInvictus_cologne_img6.jpg" alt="Paco Rabanne Invictus bottle" width="300" height="300">
+                <img src="../../imgs_infoSite/pacoRabanneInvictus_cologne_img6.jpg" alt="Paco Rabanne Invictus bottle" width="300" height="300">
                 <p>
                     <b>Notes:</b> Fresh and sporty scent with grapefruit, marine notes, and ambergris. <br>
                     <b>Occasion:</b> Perfect for daytime wear and active lifestyles. <br>
@@ -50,7 +50,7 @@
                 </li>
 
                 <li id="Tom" class="d-flex flex-column align-items-center justify-content-center text-center"> <h2>Tom Ford Noir Extreme</h2>
-                <img src="/imgs_infoSite/tomFordNoirExtreme_cologne_img7.jpg" alt="Tom Ford Noir Extreme bottle" width="300" height="300">
+                <img src="../../imgs_infoSite/tomFordNoirExtreme_cologne_img7.jpg" alt="Tom Ford Noir Extreme bottle" width="300" height="300">
                 <p>
                     <b>Notes:</b> Warm and oriental scent with cardamom, amber, and vanilla notes. <br>
                     <b>Occasion:</b> Ideal for evening wear and special occasions. <br>
@@ -61,7 +61,7 @@
                 </li>
 
                 <li id="versace" class="d-flex flex-column align-items-center justify-content-center text-center"> <h2>Versace Eros Eau De Parfum</h2>
-                <img src="/imgs_infoSite/versaceEros_cologne_img8.jpg" alt="Versace Eros Eau De Parfum bottle" width="300" height="300">
+                <img src="../../imgs_infoSite/versaceEros_cologne_img8.jpg" alt="Versace Eros Eau De Parfum bottle" width="300" height="300">
                 <p> 
                     <b>Notes:</b> Fresh and oriental scent with mint, tonka bean, and vanilla notes. <br>
                     <b>Occasion:</b> Suitable for both day and night wear. <br>
@@ -78,9 +78,9 @@
     <!-- Footer section start -->
 
     <footer class="footer2 site-footer d-flex flex-column align-items-center justify-content-center py-3"> 
-        <h3><a href="/pages/pageOne/pageOne_twoPg_infoSIte.html">HOME</a></h3>
+        <h3><a href="../pageOne/pageOne_twoPg_infoSIte.html">HOME</a></h3>
         <h3>© 2024 Cologne Discovery Site. All rights reserved.</h3>
-        <h3><a href="/pages/pageTwo/pageTwoStyling.css">Explore More Cologne Options</a></h3>
+        <h3><a href="pageTwo_twoPg_infoSite.html">Explore More Cologne Options</a></h3>
         <!-- href is '#' to be used as a placeholder -->
         <h3> Contact Us At: <a href="#">info@colognediscovery.com</a></h3>
     </footer>
